--- a/Exercises/6_a_Non-Linear_Classification.ipynb
+++ b/Exercises/6_a_Non-Linear_Classification.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_results = random_search.fit(X_train[:1000],y_train[:1000])"
+    "search_results = random_search.fit(X_train[:1000],y_train[:1000]) # takes ages with the whole dataset"
    ]
   },
   {
@@ -234,6 +234,7 @@
     }
    ],
    "source": [
+    "#train again with C=0.5\n",
     "svm = SVC(C=0.5)\n",
     "svm.fit(X_train,y_train)"
    ]
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,11 +291,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = make_pipeline(StandardScaler(), MLPClassifier(activation='tanh', solver='sgd'))"
+    "# prepare data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = make_pipeline(StandardScaler(), MLPClassifier(hidden_layer_sizes=(256,256,256), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.1, max_iter=300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('standardscaler',\n",
+       "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       "                ('mlpclassifier',\n",
+       "                 MLPClassifier(activation='tanh', alpha=0.0001,\n",
+       "                               batch_size='auto', beta_1=0.9, beta_2=0.999,\n",
+       "                               early_stopping=False, epsilon=1e-08,\n",
+       "                               hidden_layer_sizes=(256, 256, 256),\n",
+       "                               learning_rate='constant', learning_rate_init=0.1,\n",
+       "                               max_fun=15000, max_iter=300, momentum=0.9,\n",
+       "                               n_iter_no_change=10, nesterovs_momentum=True,\n",
+       "                               power_t=0.5, random_state=None, shuffle=True,\n",
+       "                               solver='sgd', tol=0.0001,\n",
+       "                               validation_fraction=0.1, verbose=False,\n",
+       "                               warm_start=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9711428571428572"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As there are so many parameters, it's very hard to find the best ones. Here are some of my trys:\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(64), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.001)\n",
+    "\n",
+    "Score: 0.9527428571428571\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(64), activation='tanh', solver='sgd', alpha=0.001, learning_rate='constant', learning_rate_init=0.001, max_iter=300)\n",
+    "\n",
+    "Score: 0.9552\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(64), activation='tanh', solver='sgd', alpha=0.00001, learning_rate='constant', learning_rate_init=0.001, max_iter=300)\n",
+    "\n",
+    "Score: 0.9569714285714286\n",
+    "\n",
+    "* alpha doesn't have a big impact\n",
+    "\n",
+    "pipeline = make_pipeline(StandardScaler(), MLPClassifier(hidden_layer_sizes=(64,64,64), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.001, max_iter=300))\n",
+    "\n",
+    "Score: 0.9529714285714286\n",
+    "\n",
+    "* more layers don't help\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(128,128,128), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.001, max_iter=300)\n",
+    "\n",
+    "Score: 0.9592\n",
+    "\n",
+    "* more neurons help a little\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(128,128,128), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.01, max_iter=300)\n",
+    "\n",
+    "Score: 0.9613142857142857\n",
+    "\n",
+    "* higher learning_rate is better\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(128,128,128), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.1, max_iter=300))\n",
+    "\n",
+    "0.9672571428571428\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(128,128,128), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='adaptive', learning_rate_init=0.1, max_iter=300)\n",
+    "\n",
+    "Score: 0.9672\n",
+    "\n",
+    "* same result with adaptive learning rate\n",
+    "\n",
+    "MLPClassifier(hidden_layer_sizes=(128,128,128), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='invscaling', learning_rate_init=0.1, max_iter=300, power_t=0.1)\n",
+    "\n",
+    "Score: 0.9649714285714286\n",
+    "\n",
+    "* Best result:\n",
+    "MLPClassifier(hidden_layer_sizes=(256,256,256), activation='tanh', solver='sgd', alpha=0.0001, learning_rate='constant', learning_rate_init=0.1, max_iter=300)\n",
+    "\n",
+    "Score: 0.9711428571428572"
    ]
   },
   {
@@ -310,18 +434,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
