--- a/Exercises/6_b_AutoSkLearn_Regression_NY_Taxy.ipynb
+++ b/Exercises/6_b_AutoSkLearn_Regression_NY_Taxy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,25 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scikit-optimize\n",
-      "  Downloading scikit_optimize-0.7.4-py2.py3-none-any.whl (80 kB)\n",
-      "\u001b[K     |████████████████████████████████| 80 kB 1.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: scikit-learn>=0.19.1 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (0.22.1)\n",
-      "Requirement already satisfied: scipy>=0.18.0 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (1.4.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (0.14.1)\n",
-      "Requirement already satisfied: numpy>=1.11.0 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (1.18.1)\n",
-      "Collecting pyaml>=16.9\n",
-      "  Downloading pyaml-20.4.0-py2.py3-none-any.whl (17 kB)\n",
-      "Requirement already satisfied: PyYAML in /home/keuper/anaconda3/lib/python3.7/site-packages (from pyaml>=16.9->scikit-optimize) (5.3)\n",
-      "Installing collected packages: pyaml, scikit-optimize\n",
-      "Successfully installed pyaml-20.4.0 scikit-optimize-0.7.4\n"
+      "Requirement already satisfied: scikit-optimize in c:\\dev\\anaconda\\lib\\site-packages (0.7.4)\n",
+      "Requirement already satisfied: pyaml>=16.9 in c:\\dev\\anaconda\\lib\\site-packages (from scikit-optimize) (20.4.0)\n",
+      "Requirement already satisfied: numpy>=1.11.0 in c:\\dev\\anaconda\\lib\\site-packages (from scikit-optimize) (1.18.1)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\dev\\anaconda\\lib\\site-packages (from scikit-optimize) (0.14.1)\n",
+      "Requirement already satisfied: scipy>=0.18.0 in c:\\dev\\anaconda\\lib\\site-packages (from scikit-optimize) (1.4.1)\n",
+      "Requirement already satisfied: scikit-learn>=0.19.1 in c:\\dev\\anaconda\\lib\\site-packages (from scikit-optimize) (0.22.1)\n",
+      "Requirement already satisfied: PyYAML in c:\\dev\\anaconda\\lib\\site-packages (from pyaml>=16.9->scikit-optimize) (5.3)\n"
      ]
     }
    ],
@@ -117,6 +112,125 @@
     "    * SVM: C and gamma (use RBF kernel)\n",
     "* parallelize -> n_jobs\n",
     "* use CoLab to rum the job for up to 12h \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "subset_size=1000\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X.to_numpy()[:subset_size,:], y.to_numpy()[:subset_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skopt import BayesSearchCV\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from skopt.space import Real, Integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test score: 0.7336802942538188\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear = LinearRegression()\n",
+    "linear.fit(X_train,y_train)\n",
+    "print(\"test score:\", linear.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Dev\\anaconda\\lib\\site-packages\\skopt\\optimizer\\optimizer.py:409: UserWarning: The objective has been evaluated at this point before.\n",
+      "  warnings.warn(\"The objective has been evaluated \"\n",
+      "C:\\Dev\\anaconda\\lib\\site-packages\\skopt\\optimizer\\optimizer.py:409: UserWarning: The objective has been evaluated at this point before.\n",
+      "  warnings.warn(\"The objective has been evaluated \"\n",
+      "C:\\Dev\\anaconda\\lib\\site-packages\\skopt\\optimizer\\optimizer.py:409: UserWarning: The objective has been evaluated at this point before.\n",
+      "  warnings.warn(\"The objective has been evaluated \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best validation score: 0.7304158778058502\n",
+      "best parameters: OrderedDict([('max_depth', 19), ('n_estimators', 154)])\n",
+      "test score: 0.7738044529421964\n"
+     ]
+    }
+   ],
+   "source": [
+    "optRFR = BayesSearchCV(\n",
+    "    RandomForestRegressor(),\n",
+    "    {\n",
+    "        'n_estimators':Integer(10,200, prior='log-uniform'),\n",
+    "        'max_depth':Integer(2,20,prior='log-uniform')       \n",
+    "    },\n",
+    "    n_iter=32,\n",
+    "    n_jobs=-1,\n",
+    "    random_state=0\n",
+    ")\n",
+    "optRFR.fit(X_train,y_train)\n",
+    "print(\"best validation score:\", optRFR.best_score_)\n",
+    "print(\"best parameters:\", optRFR.best_params_)\n",
+    "print(\"test score:\", optRFR.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best validation score: 0.7445135744340643\n",
+      "best parameters: OrderedDict([('C', 603.5578367071575), ('gamma', 0.000648014134267499)])\n",
+      "test score: 0.732207308993835\n"
+     ]
+    }
+   ],
+   "source": [
+    "optSVR = BayesSearchCV(\n",
+    "    SVR(),\n",
+    "    {\n",
+    "        'C': Real(1e-6, 1e+6, prior='log-uniform'),\n",
+    "        'gamma': Real(1e-6, 1e+1, prior='log-uniform'),         \n",
+    "    },\n",
+    "    n_iter=32,\n",
+    "    n_jobs=-1,\n",
+    "    random_state=0\n",
+    ")\n",
+    "optSVR.fit(X_train,y_train)\n",
+    "print(\"best validation score:\", optSVR.best_score_)\n",
+    "print(\"best parameters:\", optSVR.best_params_)\n",
+    "print(\"test score:\", optSVR.score(X_test, y_test))"
    ]
   },
   {
