save model to googledrive

--- a/Project/Project_NLP_disaster_tweets.ipynb
+++ b/Project/Project_NLP_disaster_tweets.ipynb
@@ -846,6 +846,46 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "DDifqsiz5qX5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "09a9b923-953b-431a-ca9b-6bc183176052"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "root_path = '/content/drive/My Drive/INFM/DataScience/Project'"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UrFFzQ-P6hgH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.save(root_path + '/models/model_1.h5') "
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "O5EA792dWhuG",
         "colab_type": "code",
         "colab": {}
